# marketing-campaign-ai

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  prd.md  pyproject.toml
.claude/: settings.json  task-ledger.json
.claude/commands/: check-status.md  commit-and-pr.md  review-pr.md  run-tests.md  start-feature.md
.github/workflows/: claude-review.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_rename_ad_library_url_to_page_id.py  003_add_landing_pages_and_creative_analysis.py  004_add_facebook_page_to_competitors.py  005_add_ad_details_fields.py  006_add_duplicate_tracking.py  007_add_video_intelligence.py  008_expand_creative_analysis_add_elements.py  009_add_notifications_table.py  010_add_critiques_table.py  011_add_critique_file_storage.py  012_add_composite_scoring_and_embeddings.py  013_add_agentic_ad_engine_tables.py  014_add_project_files_table.py  015_add_generated_broll_tables.py  016_add_enhanced_analysis.py  017_refactor_subtitles_to_srt.py
app/: __init__.py  config.py  database.py  main.py
docs/: MIGRATION_GUIDE.md  SUPABASE_STORAGE_SETUP.md  VIDEO_PLAYBACK_FEATURE.md  remotion-setup.md
frontend/: .env.example  .gitignore  package-lock.json  package.json  playwright.config.ts
remotion/: README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
scripts/: backfill_creative_analysis.py  debug_page_id_lookup.py  test_ad_details_scraper.py  test_page_id_extraction.py
tests/: __init__.py  conftest.py  test_media_type_detection.py
(+228 files in other folders)
